--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="about">As a recent graduate, I am seeking a role which allows me to continue learning and perfecting my skills as I provide high-quality work, and encourages me to flourish in whatever role I am put in.</p>
         <h2>Click to view my external pages: </h2>
         <div class="social-media">            
-            <a href="https://www.facebook.com/profile.php?id=100009477246502"> <img src=""> </a>
-            <a href="https://steamcommunity.com/profiles/76561198261417763/"><img src=""></a> 
-            <a href="https://www.hackerrank.com/enricodreyer04"> <img src=""></a> 
+            <a href="https://www.facebook.com/profile.php?id=100009477246502"> <img src="images/facebook.png"> </a>
+            <a href="https://steamcommunity.com/profiles/76561198261417763/"><img src="images/steam.png"></a> 
+            <a href="https://www.hackerrank.com/enricodreyer04"> <img src="images/hacker.png"></a> 
         </div>
 
     <h2> Projects: </h2>
