--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="profile-img">
-        <img src="images/EnricoDreyer.jpg">
+        <img src="Images/EnricoDreyer.jpg">
     </div>
 
     <div class="profile-info">
@@ -20,15 +20,15 @@
         <p class="about">As a recent graduate, I am seeking a role which allows me to continue learning and perfecting my skills as I provide high-quality work, and encourages me to flourish in whatever role I am put in.</p>
         <h2>Click to view my external pages: </h2>
         <div class="social-media">            
-            <a href="https://www.facebook.com/profile.php?id=100009477246502"> <img src="images/facebook.png"> </a>
-            <a href="https://steamcommunity.com/profiles/76561198261417763/"><img src="images/steam.png"></a> 
-            <a href="https://www.hackerrank.com/enricodreyer04"> <img src="images/hacker.png"></a> 
+            <a href="https://www.facebook.com/profile.php?id=100009477246502"> <img src="Images/facebook.png"> </a>
+            <a href="https://steamcommunity.com/profiles/76561198261417763/"><img src="Images/steam.png"></a> 
+            <a href="https://www.hackerrank.com/enricodreyer04"> <img src="Images/hacker.png"></a> 
         </div>
 
     <h2> Projects: </h2>
 
         <div class="projects">
-            <img src="images/computerclub.png">
+            <img src="Image/computerclub.png">
         <p><b>Systems</b></p>
         <small>
             As a team of 6, we created a fully working POS system for a restaurant.
@@ -36,7 +36,7 @@
         </div>
 
         <div class="projects">
-            <img src="images/web3.png">
+            <img src="Image/web3.png">
         <p><b>Web Development</b></p>
         <small>
             I made this website in Visual Studio Code using HTML, CSS and JavaScript. 
@@ -45,7 +45,7 @@
         </div>
 
         <div class="projects">
-            <img src="images/web2.png">
+            <img src="Image/web2.png">
         <p><b>Databases</b></p>
         <small>
             As a team of 2, we created a website for an airline, with a working database.            
@@ -81,15 +81,15 @@
         </div>
 
         <div class="contact">
-            <span><img src="images/gmail.png">enricodreyer04@gmail.com</span>            
+            <span><img src="Images/gmail.png">enricodreyer04@gmail.com</span>            
         </div>
 
         <div class="contact">
-            <span><img src="images/phone.png">0828907779</span>
+            <span><img src="Images/phone.png">0828907779</span>
         </div>        
 
         <a class="contact" href="https://wa.me/27828907779" target="_blank" rel="nofollow">
-            <span><img src="images/phone.png"/>Whatsapp me!</span>
+            <span><img src="Images/phone.png"/>Whatsapp me!</span>
          </a>
 
          <p class="me">Designed by me</p>
