--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2> Projects: </h2>
 
         <div class="projects">
-            <img src="Image/computerclub.png">
+            <img src="Images/computerclub.png">
         <p><b>Systems</b></p>
         <small>
             As a team of 6, we created a fully working POS system for a restaurant.
@@ -36,7 +36,7 @@
         </div>
 
         <div class="projects">
-            <img src="Image/web3.png">
+            <img src="Images/web3.png">
         <p><b>Web Development</b></p>
         <small>
             I made this website in Visual Studio Code using HTML, CSS and JavaScript. 
@@ -45,7 +45,7 @@
         </div>
 
         <div class="projects">
-            <img src="Image/web2.png">
+            <img src="Images/web2.png">
         <p><b>Databases</b></p>
         <small>
             As a team of 2, we created a website for an airline, with a working database.            
@@ -79,6 +79,9 @@
             <span id="lastPlayedHours3"></span> hours on record.            
         </small>
         </div>
+
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-a5a24c18-3407-4cdb-99fe-dba760b037f1"></div>
 
         <div class="contact">
             <span><img src="Images/gmail.png">enricodreyer04@gmail.com</span>            
