--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </head>
 <body>
+   
     <div class="profile-img">
-        <img src="Images/EnricoDreyer.jpg">
+        <img src="Images/EnricoDreyer2.jpg">
     </div>
 
     <div class="profile-info">
