Added animation and margin
Added animation at projects class and margin.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
         </small>
         </div>
 
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <div class="youtube">
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
             <div class="elfsight-app-b8605e8a-75ec-4ecb-ae67-8179016e0a41"></div>
+        </div>        
 
         <div> 
             <div class="contact">
