Finished third API
Added weather, fixed mobile contact slignment.

--- a/index.html
+++ b/index.html
@@ -82,10 +82,38 @@
         </small>
         </div>
 
+        <h2> Favourite Youtube channel: </h2>
+
         <div class="youtube">
             <script src="https://apps.elfsight.com/p/platform.js" defer></script>
             <div class="elfsight-app-b8605e8a-75ec-4ecb-ae67-8179016e0a41"></div>
-        </div>        
+        </div>
+        
+        <h2> The weather in Gauteng, Vanderbijlpark: </h2>
+
+        <div class="projects">
+            <img src="Images/mainweather2.png">
+            <p><b><span> Weather: </span></b></p>
+        <small>
+            <span id='mainweather'></span>            
+        </small>
+        </div>
+
+        <div class="projects">
+            <img src="Images/temperature6.jpg">
+            <p><b><span> Temperature: </span></b></p>
+        <small>
+            <span id='temperature'></span>            
+        </small>
+        </div>
+
+        <div class="projects">
+            <img src="Images/humidity2.png">
+            <p><b><span> Humidity: </span></b></p>
+        <small>
+            <span id='humidity'></span>            
+        </small>
+        </div>
 
         <div> 
             <div class="contact">
